--- a/src/modules/src/controller/Kbuild
+++ b/src/modules/src/controller/Kbuild
@@ -9,4 +9,5 @@ obj-y += position_controller_pid.o
 obj-y += controller_lee.o
 obj-y += controller_passthrough.o
 obj-y += controller_wrench.o
+obj-y += lqr_data.o
 obj-y += controller_lqr.o
